# scrapi

./: .gitignore  Cargo.toml  LICENSE  README.md  scrapers.txt  scrapes.txt  test.json
.github/workflows/: general.yml
src/: args.rs  enums.rs  main.rs  structs.rs  utils.rs
src/commands/: check.rs  combine.rs  delete.rs  inspect.rs  list.rs  mod.rs  run.rs  scrape.rs
src/structs/: scrape.rs
