[package]
name = "rscrape"
version = "0.1.0"
edition = "2021"
authors = ["Joakim Wilhelmsson"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
colored = "2.0.0"
inquire = "0.6.2"
reqwest = { version = "0.11.17", features = ["blocking", "json"] }
scraper = "0.16.0"
