[package]
name = "scrapi"
version = "0.1.0"
edition = "2021"
authors = ["Joakim Wilhelmsson"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
cli-table = "0.4.7"
colored = "2.0.0"
csv = "1.3.0"
inquire = "0.6.2"
reqwest = { version = "0.11.17", features = ["blocking", "json"] }
scraper = "0.16.0"
serde = "1.0.197"
serde_json = "1.0.114"
thirtyfour = "0.27.2"
tokio = "1.35.1"
